# atvvoice

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  copr.yml  release.yml
docs/research/: report.md
docs/research/scripts/: atvv-capture.py  decode-test.py
docs/specs/: 2026-03-23-atvvoice-design.md
src/: adpcm.rs  atvv.rs  ble.rs  dbus.rs  main.rs  pw.rs
src/protocol/: mod.rs  types.rs  v04.rs  v10.rs
