[package]
name = "atvvoice"
version = "0.1.3"
edition = "2021"
description = "Android TV Voice over BLE (ATVV) daemon for Linux/PipeWire"
license = "MIT"

[features]
default = ["dbus"]
dbus = ["dep:zbus"]

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
pipewire = { version = "0.9", features = ["v0_3_49"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1"
zbus = { version = "5", features = ["tokio"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tokio-stream = "0.1"

[package.metadata.deb]
section = "sound"
copyright = "2026 atvvoice contributors"
depends = "libpipewire-0.3-0, libdbus-1-3, bluez"
assets = [
    ["target/release/atvvoice", "usr/bin/", "755"],
    ["dist/atvvoice.service", "usr/lib/systemd/user/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/atvvoice", dest = "/usr/bin/atvvoice", mode = "0755" },
    { source = "dist/atvvoice.service", dest = "/usr/lib/systemd/user/atvvoice.service", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
pipewire-libs = "*"
dbus-libs = "*"
bluez = "*"
